# 2025-autumn-bfi

./: .env.example  .gitignore  Dockerfile  Homepage.py  Makefile  README.md  app.py  app3.py  dataprep.py  docker-compose.yaml  get_data.py  pyproject.toml  test_chart.html
.devcontainer/: devcontainer.json
data/: .env.example  Cleaned_data.csv  combined_US_regions.geojson  merged_healthcare_jobs_with_gdp.csv  msa_gdp_percent_change.csv  the_rise_of_healthcare_jobs_disclosed_data_by_msa.csv
data/output/: sample_output.csv
docs/: Codebook.xlsx
gt_utilities/: __init__.py  build_census_bea_resources.py  census_bea_pipeline.py  charts.py  clean_census_bea_data.py  config.py  dataprep_utils.py  demographics.py  get_census_bea_data.py  loaders.py  map_visualization_helper.py  merge_census_bea_data.py
meetings/: BFI-Week2-Mentor-Meeting.docx  BFI-Week3-Mentor-Meeting.docx
notebooks/: app.py  app_py_refactored.py  charts.ipynb  charts.py  codetesting.ipynb  config.py  data_cleaning_pop_race_and_sex.py  demographics.py  loaders.py  refined_code.ipynb
pages/: 1_Guided_Tour.py  2_Freeroam.py
scripts/: download_bea_gdp.py
src/utils/: settings.py
utils/indiv_msas/: get_data.py  supp_data.ipynb  supp_data.py
