[tool.poetry]
# Streamlit Community Cloud uses Poetry when it finds pyproject.toml (if uv.lock is not present).
# Disable package mode so Poetry only installs dependencies and does not try to install this app as a package.
package-mode = false

[project]
name = "2025-autumn-bfi"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "pandas~=2.1",
  "python-dotenv~=1.0.0",
  "jupyterlab~=4.0.0",
  "ipykernel~=6.16",
  "ruff==0.7.2",
  "numpy~=1.2",
  "pre-commit~=3.5",
  "coverage~=7.3",
  "pytest~=7.4",
  "geopandas~=1.1.1",
  "plotly~=6.4.0",
  "streamlit~=1.51.0",
  "statsmodels~=0.14.5",
  "scipy~=1.16.3",
  "pyarrow~=21.0.0",
  "altair~=5.5.0",
  "vegafusion~=2.0.3",
  "vl-convert-python~=1.8.0",
  "matplotlib~=3.10.7",
  "scikit-learn~=1.7.2",
  "path~=17.1.1",
  "requests~=2.32.5",
  "folium~=0.14.0",
  "shapely~=2.0.6",
  "geopy~=2.3.0",
  "rich~=14.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.distutils.egg_info]
egg_base = "."

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "ANN",    # flake8-annotations - type annotations, some ignored
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "ANN002", # missing type on *args
  "ANN003", # missing type on **kwargs
  "B905"    # won't work on python <3.10
]

[tool.ruff.lint.pydocstyle]
convention = "google"
